Fix bug #57197, crash when opening a url when only the mail/news window is open by using the uri loader to do all of the heavy lifting. r=alecf, sr=mscott